RESOLVED FIXED110660
[WK2] The root and page overlay layers should be the size of the view, not the content
https://bugs.webkit.org/show_bug.cgi?id=110660
Summary [WK2] The root and page overlay layers should be the size of the view, not th...
Tim Horton
Reported 2013-02-22 16:44:35 PST
I regressed this a while back, but was wrong. This is doubly problematic because in the autolayout case, we never change the size of the overlay when the content resizes. The root layer one isn't a problem because it didn't have masksToBounds set, so the sublayers could spill out. I'm considering changing that to make bugs of this sort more obvious. <rdar://problem/13096456>
Attachments
patch (3.64 KB, patch)
2013-02-22 16:52 PST, Tim Horton
simon.fraser: review+
Tim Horton
Comment 1 2013-02-22 16:52:14 PST
Tim Horton
Comment 2 2013-02-22 16:59:18 PST
Note You need to log in before you can comment on or make changes to this bug.