Source/WebKit2/WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.mm
@@ -380,7 +380,7 @@ void TiledCoreAnimationDrawingArea::updateGeometry(const IntSize& viewSize)
     }
 
     if (m_pageOverlayLayer)
-        m_pageOverlayLayer->setSize(size);
+        m_pageOverlayLayer->setSize(viewSize);
 
     if (!m_layerTreeStateIsFrozen)
         flushLayers();
@@ -388,7 +388,7 @@ void TiledCoreAnimationDrawingArea::updateGeometry(const IntSize& viewSize)
     [CATransaction begin];
     [CATransaction setDisableActions:YES];
 
-    m_rootLayer.get().frame = CGRectMake(0, 0, size.width(), size.height());
+    m_rootLayer.get().frame = CGRectMake(0, 0, viewSize.width(), viewSize.height());
 
     [CATransaction commit];
     
@@ -497,7 +497,7 @@ void TiledCoreAnimationDrawingArea::createPageOverlayLayer()
 
     m_pageOverlayLayer->setAcceleratesDrawing(true);
     m_pageOverlayLayer->setDrawsContent(true);
-    m_pageOverlayLayer->setSize(m_webPage->size());
+    m_pageOverlayLayer->setSize(expandedIntSize(FloatSize(m_rootLayer.get().frame.size)));
 
     m_pageOverlayPlatformLayer = m_pageOverlayLayer->platformLayer();
 
